--- a/2022/MediaRepresentationV/mr5_12.md
+++ b/2022/MediaRepresentationV/mr5_12.md
@@ -27,7 +27,7 @@
     - [部分でバランスを変えてみよう](#部分でバランスを変えてみよう)
     - [楽しもう](#楽しもう)
   - [セルルック(応用編)](#セルルック応用編)
-  - [やってみようPart3](#やってみようpart3-1)
+  - [やってみようPart4](#やってみようpart4)
     - [セルルック](#セルルック)
     - [輪郭](#輪郭)
   - [シェーダーエディターを理解する上で大事なこと](#シェーダーエディターを理解する上で大事なこと)
@@ -35,6 +35,8 @@
 
 ---
 ## ノードベースエディター
+[![](https://img.youtube.com/vi/DbeUAZfhR0E/0.jpg)](https://www.youtube.com/watch?v=DbeUAZfhR0E){:target="_blank"}
+
 ### ノードベースエディターとは？
 - ノードと呼ばれる機能を持つブロックを線で繋ぐことによって、処理の指示を与えることができる
 - 根底にはプログラミングの考え方が採用されているが、テキストではなくグラフィカルに表現されるのが特徴
@@ -64,6 +66,8 @@
 ---
 ## やってみようPart1
 ノードエディターに触ってみよう。
+
+[![](https://img.youtube.com/vi/Y__Vtpr2EpU/0.jpg)](https://www.youtube.com/watch?v=Y__Vtpr2EpU){:target="_blank"}
 
 ### 準備
 - File - New - General
@@ -132,6 +136,11 @@
 ---
 ---
 ## やってみようPart2 
+PBRマテリアルを使ってみよう
+
+[![](https://img.youtube.com/vi/73AMCv-1Ppk/0.jpg)](https://www.youtube.com/watch?v=73AMCv-1Ppk){:target="_blank"}
+
+
 ## サイトからダウンロードしてあててみよう
 - [3D Textures](https://3dtextures.me/2022/02/25/fabric-lace-018/){:target="_blank"}の「Download All The Maps」をクリック
 - 全部選択してダウンロード
@@ -170,6 +179,8 @@
 
 ## やってみようPart3
 シェーダーエディターを使ってみよう
+
+[![](https://img.youtube.com/vi/dZh4-WzQRSI/0.jpg)](https://www.youtube.com/watch?v=dZh4-WzQRSI){:target="_blank"}
 
 ### 下準備
 - Cube削除
@@ -227,7 +238,10 @@
 
 ---
 ---
-## やってみようPart3
+## やってみようPart4
+
+[![](https://img.youtube.com/vi/WSLxP0hbJ_k/0.jpg)](https://www.youtube.com/watch?v=WSLxP0hbJ_k){:target="_blank"}
+
 ### セルルック
 - 新しく作って、Susann追加
 - BSDFの出力にシェーダーtoRGBで白黒にして
