--- a/2022/MediaRepresentationV/mr5_13.md
+++ b/2022/MediaRepresentationV/mr5_13.md
@@ -72,7 +72,7 @@
 - もうひとつMathを追加してMultiplyにしてGroupInputのSpeedからつなごう
 
 ### 大きさをずらして変えてみよう
-- Mathを追加してSineにして、Instance on PointsのScaleに接続
+- Mathを追加して[Sine](https://rikeilabo.com/trigonometric-function-graph){:target="_blank"}にして、Instance on PointsのScaleに接続
 - Value(#frame) から繋ごう
 - Sineとの間にMath(Divide)を追加して10としてスピード調整
 - IDを追加しよう。IDは生成されたInstanceの番号がわかる
@@ -91,7 +91,7 @@
 [元ネタ：Blender 3.0 Geometry Nodes Lighting a Pavillion](https://www.youtube.com/watch?v=VoxYbGMtXRE){:target="_blank"}
 
 ### 下準備
-- 適当な小屋を作ろう(余裕ない人はダウンロードしてね)
+- 適当な小屋を作ろう(余裕ない人は[ダウンロード](20220401t_day13_Part2.blend)してね)
 - 電球をつける線をCurveで描こう
 
 ### カーブを電線の様に垂れ下がらせよう
