--- a/2022/MediaRepresentationV/mr5_13.md
+++ b/2022/MediaRepresentationV/mr5_13.md
@@ -1,11 +1,11 @@
-# メディア表現V 13. ジオメタリーノード
+# メディア表現V 13. ジオメトリーノード
 
 [メディア表現V TOPに戻る](./index.md)
 
 ---
 ## 目次
 
-- [メディア表現V 13. ジオメタリーノード](#メディア表現v-13-ジオメタリーノード)
+- [メディア表現V 13. ジオメトリーノード](#メディア表現v-13-ジオメトリーノード)
   - [目次](#目次)
   - [ジオメトリーノードって何？](#ジオメトリーノードって何)
   - [BagaPie(紹介)](#bagapie紹介)
