--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -1,18 +1,19 @@
-# メディア表現V 3. モデリング
+# メディア表現 V 3. モデリング
 
-[メディア表現V TOPに戻る](./index.md)
+[メディア表現 V TOP に戻る](./index.md)
 
 ---
+
 ## 目次
 
-- [メディア表現V 3. モデリング](#メディア表現v-3-モデリング)
+- [メディア表現 V 3. モデリング](#メディア表現-v-3-モデリング)
   - [目次](#目次)
   - [モデリングの方法](#モデリングの方法)
   - [ポリゴンモデリング](#ポリゴンモデリング)
     - [ポリゴンモデリングとは](#ポリゴンモデリングとは)
     - [主に利用するショートカット](#主に利用するショートカット)
     - [その他](#その他)
-  - [やってみようPart1(ワイングラス)](#やってみようpart1ワイングラス)
+  - [やってみよう Part1(ワイングラス)](#やってみよう-part1ワイングラス)
     - [下準備](#下準備)
     - [ワイングラスを作ろう(外側)](#ワイングラスを作ろう外側)
     - [ワイングラスを作ろう(内側)](#ワイングラスを作ろう内側)
@@ -22,108 +23,117 @@
     - [HDRI(環境光)を設定](#hdri環境光を設定)
     - [レンダリングしてみよう](#レンダリングしてみよう)
     - [参考:色んな方法があるモデリング](#参考色んな方法があるモデリング)
-  - [やってみようPart2](#やってみようpart2)
+  - [やってみよう Part2](#やってみよう-part2)
     - [立方体から人型を作ってみよう](#立方体から人型を作ってみよう)
-  - [やってみようPart3](#やってみようpart3)
+  - [やってみよう Part3](#やってみよう-part3)
   - [好きな形を作るには？](#好きな形を作るには)
   - [気をつけること](#気をつけること)
   - [参考](#参考)
     - [Monster Mash(こんなモデリング方法も)](#monster-mashこんなモデリング方法も)
     - [Low Poly Character(英語の動画は字幕使ってみてみよう)](#low-poly-character英語の動画は字幕使ってみてみよう)
     - [本格的にキャラクター作りたい人向け](#本格的にキャラクター作りたい人向け)
+    - [便利な Add ons](#便利な-add-ons)
   - [お疲れ様〜](#お疲れ様)
 
 ---
 
-
 ## モデリングの方法
-- 大きく分けるとEdit Mode(ポリゴンモデリング)とSculpt Mode(スカルプティング)がある。
-- Edit Modeは3つ以上の点で作られる面を組み合わせて形状を作る
-- Sculptは粘土細工・彫刻のように、盛り上げたり削ったりして形状を作る
+
+- 大きく分けると Edit Mode(ポリゴンモデリング)と Sculpt Mode(スカルプティング)がある。
+- Edit Mode は 3 つ以上の点で作られる面を組み合わせて形状を作る
+- Sculpt は粘土細工・彫刻のように、盛り上げたり削ったりして形状を作る
 - この演習ではスカルプティングは扱わない
 - モデリングをしっかりやりたい人は、いろいろなチュートリアルを真似することをお勧めする
 
 ## ポリゴンモデリング
+
 ### ポリゴンモデリングとは
+
 - ポリゴン(多角形)の集まりをメッシュと呼ぶ
 - 多角形は頂点・辺・面から成り立っている
 
 ### 主に利用するショートカット
-- 頂点・辺・面(1,2,3でモード切り替え)の移動・回転・スケールはG,R,S
+
+- 頂点・辺・面(1,2,3 でモード切り替え)の移動・回転・スケールは G,R,S
 - E(Exlude)で押し出し
 - I(Inset)で面の差し込み
-- Ctrl-Rでループカット
-- Ctrl-Bでベベル
+- Ctrl-R でループカット
+- Ctrl-B でベベル
 - Option-右クリックでループ選択
 
 ### その他
-- 右クリックでsubdivideでポリゴンを細分化できる
-- ModifierのSubDivision Surfaceで、非破壊的に滑らかにできる
-- 滑らかに見せるのは、ObjectモードでShade Smooth
+
+- 右クリックで subdivide でポリゴンを細分化できる
+- Modifier の SubDivision Surface で、非破壊的に滑らかにできる
+- 滑らかに見せるのは、Object モードで Shade Smooth
 
 ---
+
 ---
 
-## やってみようPart1(ワイングラス)
+## やってみよう Part1(ワイングラス)
 
-[![](https://img.youtube.com/vi/X7LSNEMs7Bs/0.jpg)](https://www.youtube.com/watch?v=X7LSNEMs7Bs){:target="_blank"}
+[![](https://img.youtube.com/vi/X7LSNEMs7Bs/0.jpg)](https://www.youtube.com/watch?v=X7LSNEMs7Bs){:target="\_blank"}
 
 ### 下準備
 
-- Blenderを起動して、立方体を削除(X)
+- Blender を起動して、立方体を削除(X)
 - Edit - preferences - Add ons
-- imagesを検索
-- Import-Exmport Import images as Planesにチェック
+- images を検索
+- Import-Exmport Import images as Planes にチェック
 
 ![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
 
-[ワイングラス zip形式](img/wineglass.jpg.zip)
+[ワイングラス zip 形式](img/wineglass.jpg.zip)
 
-- 上のリンク先の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
-- (注意)chromeだと勝手にwebp形式になって保存される(汗 2022/3/8)...zipファイルを保存して解凍してください...
-- File-SaveでYYYYMMDDt_mr5_03_01.blend(保存は随時行おう)
-- Import - Images as Planesで写真を選択
+- 上のリンク先の写真を Blender フォルダに wineglass.jpg として保存しておこう
+- (注意)chrome だと勝手に webp 形式になって保存される(汗 2022/3/8)...zip ファイルを保存して解凍してください...
+- File-Save で YYYYMMDDt_mr5_03_01.blend(保存は随時行おう)
+- Import - Images as Planes で写真を選択
 - マテリアルプレビューモードに
-- S 10で10倍に, G-Xで少し後ろに、G-Zで少し上にあげてZ=0のところにグラスの下をあわせる
+- S 10 で 10 倍に, G-X で少し後ろに、G-Z で少し上にあげて Z=0 のところにグラスの下をあわせる
 
 ### ワイングラスを作ろう(外側)
 
-- Shift+AでCircle
-- 円を選択して、TABキーでEditモードに
-- Fで面をつくる
-- 右上のXを押して、X軸側からにする
-- Sで、グラスの足の大きさにあわせる
-- Eで少し上に押し出し(Z軸方向)
-- Eでさらに上に押し出し(Z軸方向)
-- Sでサイズをあわせる
+- Shift+A で Circle
+- 円を選択して、TAB キーで Edit モードに
+- F で面をつくる
+- 右上の X を押して、X 軸側からにする
+- S で、グラスの足の大きさにあわせる
+- E で少し上に押し出し(Z 軸方向)
+- E でさらに上に押し出し(Z 軸方向)
+- S でサイズをあわせる
 - これを繰り返して、グラスの外側をつくる
 
 ### ワイングラスを作ろう(内側)
-- Iで内側に狭めよう
-- Eで下に押し出して(Z軸方向)
-- Sでグラスの内側にあうようにスケール
+
+- I で内側に狭めよう
+- E で下に押し出して(Z 軸方向)
+- S でグラスの内側にあうようにスケール
 - これを繰り返して、グラスの内側をつくる
 
 ### 滑らかにしよう
-- TABキーでObjectモードに
-- 右クリックでShade Smooth
-- もう少し滑らかにしたいので、モディファイアからSubdivisionSurface
+
+- TAB キーで Object モードに
+- 右クリックで Shade Smooth
+- もう少し滑らかにしたいので、モディファイアから SubdivisionSurface
 - 画像は表示を消しておこう
 
-
 ### 台を作ってみよう
-- Shift+AでPlane
-- S 10 で10倍に
-- Tabで編集モードに入り、2で辺編集モード
+
+- Shift+A で Plane
+- S 10 で 10 倍に
+- Tab で編集モードに入り、2 で辺編集モード
 - 奥の辺を選んで、E Z で押し出し
-- 交差する辺を選んでCtrl-Bでベベル スクロールでカーブに
-- Tabでオブジェクトモードに戻り、右クリック Shade smoothで滑らかに
+- 交差する辺を選んで Ctrl-B でベベル スクロールでカーブに
+- Tab でオブジェクトモードに戻り、右クリック Shade smooth で滑らかに
 
 ### ワイングラス・台に材質を設定しよう
-[参考ページ](https://kemarii.com/blog/cg/blender-glass-material/){:target="_blank"}
 
-- MaterialPropertiesからNew
-- プリンシブルBSDFの設定を以下のように
+[参考ページ](https://kemarii.com/blog/cg/blender-glass-material/){:target="\_blank"}
+
+- MaterialProperties から New
+- プリンシブル BSDF の設定を以下のように
 
 | 項目                         | 値               |
 | ---------------------------- | ---------------- |
@@ -133,76 +143,84 @@
 | Alpha（アルファ）            | 0.6              |
 | Blend Mode（ブレンドモード） | アルファハッシュ |
 
-レンダープロパティのScreenSpaceReflectionsにチェックを入れる
+レンダープロパティの ScreenSpaceReflections にチェックを入れる
 
 - 台は適当に色をつけてみよう
 
 ### HDRI(環境光)を設定
+
 - レンダープレビューモードに変更
 - 環境光は確認用に設定されているが、レンダリングには反映されない。
 - ガラスはまわりの環境光によってガラスに見えるので、HDRI(High Dynamic Range Image)を環境光として設定しよう。
-- [Poly Haven](https://polyhaven.com/){:target="_blank"}から適当にダウンロードして、Blenderの中に「HDRI」フォルダを作成してそこに保存しておこう。
-- World PropertiesのColorの左からEnvironmentTextureを選んで、写真を開こう。
+- [Poly Haven](https://polyhaven.com/){:target="\_blank"}から適当にダウンロードして、Blender の中に「HDRI」フォルダを作成してそこに保存しておこう。
+- World Properties の Color の左から EnvironmentTexture を選んで、写真を開こう。
 
 ### レンダリングしてみよう
+
 - 前回の復習
 - 視点を決めて、View - Align View - Align Active Camera to View
-- 位置を微調整したい場合には、Nでサイドバーが表示されている状態にして、ViewのCamera to Viewにチェックを入れて、それから調整しよう。
+- 位置を微調整したい場合には、N でサイドバーが表示されている状態にして、View の Camera to View にチェックを入れて、それから調整しよう。
 - Render Image
 - Save
 
 ---
 
 ### 参考:色んな方法があるモデリング
+
 今回は紹介にとどめるけど、こんな作り方もあるよ。
-- Curveで軸を中心とした線を描く
-- screwモディファイアで360度ぐるっと回す。
 
-[![](https://img.youtube.com/vi/SiUmPGgHhp8/0.jpg)](https://www.youtube.com/watch?v=SiUmPGgHhp8){:target="_blank"}
+- Curve で軸を中心とした線を描く
+- screw モディファイアで 360 度ぐるっと回す。
+
+[![](https://img.youtube.com/vi/SiUmPGgHhp8/0.jpg)](https://www.youtube.com/watch?v=SiUmPGgHhp8){:target="\_blank"}
 
 ---
+
 ---
-## やってみようPart2
+
+## やってみよう Part2
+
 - File-New-General
-- File-SaveでYYYYMMDDt_mr5_03_02.blend(保存は随時行おう)
+- File-Save で YYYYMMDDt_mr5_03_02.blend(保存は随時行おう)
 
 ### 立方体から人型を作ってみよう
 
 ![簡単な人形](img/mr5-03-01.png)
 
-[![](https://img.youtube.com/vi/aDxVx_T1UYA/0.jpg)](https://www.youtube.com/watch?v=aDxVx_T1UYA){:target="_blank"}
+[![](https://img.youtube.com/vi/aDxVx_T1UYA/0.jpg)](https://www.youtube.com/watch?v=aDxVx_T1UYA){:target="\_blank"}
 
-- 左右対称なので、Mirrorモディファイア使うよ。
+- 左右対称なので、Mirror モディファイア使うよ。
 - ループカット(Ctrl+R)を使うと、分割できるよ
 - 押し出し(E)を使うと、自由に伸ばせる
 - 必要に応じてインセット(I)
-- 曲面にするにはSubdivisionSurfaceモディアファイアでできる。(逆にいうとこれを想定して作る必要あり)
+- 曲面にするには SubdivisionSurface モディアファイアでできる。(逆にいうとこれを想定して作る必要あり)
 
 ---
+
 ---
 
-## やってみようPart3
+## やってみよう Part3
+
 時間がある人は最後にワインを注いでみよう
 
-[![](https://img.youtube.com/vi/SDfD5dxjedI/0.jpg)](https://www.youtube.com/watch?v=SDfD5dxjedI){:target="_blank"}
+[![](https://img.youtube.com/vi/SDfD5dxjedI/0.jpg)](https://www.youtube.com/watch?v=SDfD5dxjedI){:target="\_blank"}
 
 1. 流入口
 2. 影響あたえるもの
 3. 液体自身を扱うもの
 
-
-の3つが、液体シミュレーションには必要だよ。
+の 3 つが、液体シミュレーションには必要だよ。
 
 - ワインの注ぎ口となる球を追加(Wine)
-- 計算する範囲のCubeを(WineDomain)
-- ワイングラスにFluid追加
-  
+- 計算する範囲の Cube を(WineDomain)
+- ワイングラスに Fluid 追加
+
 | 項目      | 値       |
 | --------- | -------- |
 | Type      | Effector |
 | Is Planer | チェック |
 
-- WineにFluid追加
+- Wine に Fluid 追加
 
 | 項目           | 値     |
 | -------------- | ------ |
@@ -210,7 +228,7 @@
 | Flowtype       | Liquid |
 | FLow Behaviour | Inflow |
 
-- WineDomainにFluid追加
+- WineDomain に Fluid 追加
 
 | 項目                 | 値       |
 | -------------------- | -------- |
@@ -220,40 +238,56 @@
 | Cache - Type         | All      |
 | Cache - Is Resumable | チェック |
 
-- BakeAllでシミュレーションしてみる
-- だめならFreeAll->調整->BakeAll
-- Materialの色(ワインの色)を適当につけてみよう
+- BakeAll でシミュレーションしてみる
+- だめなら FreeAll->調整->BakeAll
+- Material の色(ワインの色)を適当につけてみよう
 
 ---
+
 ---
+
 ## 好きな形を作るには？
+
 - まずは、いろんな人のモデリングを真似しよう
 - 一つの形を作るにもいろいろな作り方あるよ
-- 曲面を作る時には滑らかにする方法がshade smooth, subdivision surface, と方法があることをしっておこう
+- 曲面を作る時には滑らかにする方法が shade smooth, subdivision surface, と方法があることをしっておこう
 - ポリゴン数はなるべく少ない状態で大まかな形からディテイルに作業した方が効率よいよ
 
 ## 気をつけること
+
 - ポリゴン数を増やしすぎない
 - ポリゴン数を減らすリトポロジーという技術もある
 
 ---
+
 ---
+
 ## 参考
+
 ### Monster Mash(こんなモデリング方法も)
-- [Monster Mash](https://paiza.hatenablog.com/entry/2021/04/07/150000){:target="_blank"}
+
+- [Monster Mash](https://paiza.hatenablog.com/entry/2021/04/07/150000){:target="\_blank"}
 
 ### Low Poly Character(英語の動画は字幕使ってみてみよう)
-- [ローポリキャラクター tutorial1](https://www.youtube.com/watch?v=k5x1I6gwpiU){:target="_blank"}
-- [ローポリキャラクター tutorial2](https://www.youtube.com/watch?v=Ljl_QFs9xhE){:target="_blank"}
-- [ローポリキャラクター tutorial3](https://www.youtube.com/watch?v=Z3vdQj06DGo){:target="_blank"}
+
+- [ローポリキャラクター tutorial1](https://www.youtube.com/watch?v=k5x1I6gwpiU){:target="\_blank"}
+- [ローポリキャラクター tutorial2](https://www.youtube.com/watch?v=Ljl_QFs9xhE){:target="\_blank"}
+- [ローポリキャラクター tutorial3](https://www.youtube.com/watch?v=Z3vdQj06DGo){:target="\_blank"}
 
 ### 本格的にキャラクター作りたい人向け
-- [キャラクターモデリング解説](https://www.youtube.com/watch?v=BBtgjTiL1XQ&t=0s){:target="_blank"f}
+
+- [キャラクターモデリング解説](https://www.youtube.com/watch?v=BBtgjTiL1XQ&t=0s){:target="\_blank"f}
+
+### 便利な Add ons
+
+- [LoopTools](https://www.youtube.com/watch?v=LQjfJ3aUDYI){:target="\_blank"f}
 
 ---
+
 ---
+
 ## お疲れ様〜
+
 - 今日学んだことを使っていろいろ作ってみよう
 - モデリングをしっかりやりたい人は、いろいろなチュートリアルを真似することがお勧め
 - 目に入るもの、どうやってモデリングしたらいいか考えてみよう。
-
