--- a/2022/SoundDesign/sd_01.md
+++ b/2022/SoundDesign/sd_01.md
@@ -1,11 +1,10 @@
-# メディア表現 V 1. オリエンテーション
+# メディア表現 V 1. オリエンテーション<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
 ---
 
-- [メディア表現 V 1. オリエンテーション](#メディア表現-v-1-オリエンテーション)
-  - [スライド](#スライド)
+1. [スライド](#スライド)
 
 ---
 
