--- a/2022/SoundDesign/sd_01.md
+++ b/2022/SoundDesign/sd_01.md
@@ -5,6 +5,7 @@
 ---
 
 1. [スライド](#スライド)
+2. [インストールしておくアプリケーション](#インストールしておくアプリケーション)
 
 ---
 
@@ -13,3 +14,11 @@
 ## スライド
 
 [スライド資料](./sd_01slide.pdf){:target="\_blank"}
+
+## インストールしておくアプリケーション
+
+- Adobe Audition
+- Adobe Premiere
+- Adobe AfterEffects
+- [Soundly](https://getsoundly.com/){:target="_blank"}
+- [Studio One Prime](https://www.mi7.co.jp/products/presonus/studioone/prime/){:target="_blank"}
