--- a/2022/SoundDesign/sd_01.md
+++ b/2022/SoundDesign/sd_01.md
@@ -13,7 +13,7 @@
 
 ## スライド
 
-[スライド資料](./sd_01slide.pdf){:target="\_blank"}
+[スライド資料](./sd_01slide.pdf){:target="_blank"}
 
 ## インストールしておくアプリケーション
 
