--- a/2022/MediaRepresentationIII/mr3_02.md
+++ b/2022/MediaRepresentationIII/mr3_02.md
@@ -9,6 +9,7 @@
 1. [メディア表現 III 2. PremierePro/AfterEffects基本操作](#メディア表現-iii-2-premiereproaftereffects基本操作)
    1. [目次](#目次)
    2. [スライド](#スライド)
+   3. [データ](#データ)
 
 ---
 
@@ -16,3 +17,6 @@
 
 [スライド資料](./mr3_02slide.pdf){:target="_blank"}
 
+## データ
+
+- [サンプルデータ](data/mr3_01-01.zip)
