--- a/2022/ComputerPractice/cp_02.md
+++ b/2022/ComputerPractice/cp_02.md
@@ -9,9 +9,17 @@
 1. [コンピュータ演習 2.インストール](#コンピュータ演習-2インストール)
    1. [目次](#目次)
    2. [スライド](#スライド)
+   3. [リンク](#リンク)
 
 ---
 
 ## スライド
 
 [スライド資料](./cp_02slide.pdf){:target="_blank"}
+
+## リンク
+- [仮パスワード変更](https://idmgr.thu.ac.jp/iumus/){:target="_blank"}
+- [Microsoft 365 インストール](https://student.thu.ac.jp/nakano){:target="_blank"}
+- [Teams ダウンロード](https://www.microsoft.com/ja-jp/microsoft-teams/download-app){:target="_blank"}
+- [ウイルスバスタークラウド(win) ダウンロード](https://virusbuster.jp/vb/trial/sem/10million_use_vb_aw_20211203.htm){:target="_blank"}
+- [Mac 用 Avira Free Antivirus](https://www.avira.com/ja/free-antivirus-mac){:target="_blank"}
