--- a/2022/ComputerPractice/cp_03.md
+++ b/2022/ComputerPractice/cp_03.md
@@ -19,8 +19,6 @@
 [スライド資料](./cp_02slide.pdf){:target="_blank"}
 
 ## リンク
-- [仮パスワード変更](https://idmgr.thu.ac.jp/iumus/){:target="_blank"}
-- [Microsoft 365 インストール](https://student.thu.ac.jp/nakano){:target="_blank"}
-- [Teams ダウンロード](https://www.microsoft.com/ja-jp/microsoft-teams/download-app){:target="_blank"}
-- [ウイルスバスタークラウド(win) ダウンロード](https://virusbuster.jp/vb/trial/sem/10million_use_vb_aw_20211203.htm){:target="_blank"}
-- [Mac 用 Avira Free Antivirus](https://www.avira.com/ja/free-antivirus-mac){:target="_blank"}
+- [e-typing](https://www.e-typing.ne.jp/){:target="_blank"}
+- [02 mac lesson1](https://www.youtube.com/watch?v=zwrc9RXhsv4){:target="_blank"}
+- [02 mac lesson2](https://www.youtube.com/watch?v=kySiPjwYvQw){:target="_blank"}
