--- a/2022/ComputerPractice/cp_03.md
+++ b/2022/ComputerPractice/cp_03.md
@@ -1,4 +1,4 @@
-# コンピュータ演習 2.インストール
+# コンピュータ演習 3. パソコンに接する心構え
 
 [コンピュータ演習 TOP に戻る](./index.md)
 
@@ -6,7 +6,7 @@
 
 ## 目次
 
-1. [コンピュータ演習 2.インストール](#コンピュータ演習-2インストール)
+1. [コンピュータ演習 3. パソコンに接する心構え](#コンピュータ演習-3-パソコンに接する心構え)
    1. [目次](#目次)
    2. [スライド](#スライド)
    3. [リンク](#リンク)
@@ -16,7 +16,7 @@
 
 ## スライド
 
-[スライド資料](./cp_02slide.pdf){:target="_blank"}
+[スライド資料](./cp_03slide.pdf){:target="_blank"}
 
 ## リンク
 - [e-typing](https://www.e-typing.ne.jp/){:target="_blank"}
