--- a/2022/SoundDesign/sd_02.md
+++ b/2022/SoundDesign/sd_02.md
@@ -1,4 +1,4 @@
-# サウンドデザイン演習 2. 音とは何か？<!-- omit in toc -->
+# サウンドデザイン演習 3. 音のデジタル化<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
@@ -12,5 +12,5 @@
 
 ## スライド
 
-[スライド資料](./sd_02slide.pdf){:target="_blank"}
+[スライド資料](./sd_03slide.pdf){:target="_blank"}
 
