--- a/2022/SoundDesign/sd_03.md
+++ b/2022/SoundDesign/sd_03.md
@@ -1,10 +1,11 @@
-# サウンドデザイン演習 2. 音とは何か？<!-- omit in toc -->
+# サウンドデザイン演習 3. 音のデジタル化<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
 ---
 
 1. [スライド](#スライド)
+2. [リンク](#リンク)
 
 ---
 
@@ -14,3 +15,7 @@
 
 [スライド資料](./sd_02slide.pdf){:target="_blank"}
 
+## リンク
+- [ハイレゾ音源って何だろう](https://www3.jvckenwood.com/audio_w/high-resolution/guidance.html){:target="_blank"}
+
+- [Spectrogram](https://musiclab.chromeexperiments.com/Spectrogram/)
