--- a/2022/SoundDesign/sd_03.md
+++ b/2022/SoundDesign/sd_03.md
@@ -18,4 +18,4 @@
 ## リンク
 - [ハイレゾ音源って何だろう](https://www3.jvckenwood.com/audio_w/high-resolution/guidance.html){:target="_blank"}
 
-- [Spectrogram](https://musiclab.chromeexperiments.com/Spectrogram/)
+- [Spectrogram](https://musiclab.chromeexperiments.com/Spectrogram/){:target="_blank"}
