--- a/2022/MediaRepresentationIII/mr3_04.md
+++ b/2022/MediaRepresentationIII/mr3_04.md
@@ -18,5 +18,6 @@
 [スライド資料](./mr3_04slide.pdf){:target="_blank"}
 
 ## データ
-- [グレイスケールチャート](data/grayscale.png)
+- [グレイスケールチャート](data/grayscale.png){:target="_blank"}
+- [肌色の修正](https://helpx.adobe.com/jp/premiere-pro/how-to/correct-skin-tones.html){:target="_blank"}
 
