--- a/2022/InformationDesignI/id_04.md
+++ b/2022/InformationDesignI/id_04.md
@@ -9,6 +9,7 @@
 1. [情報デザイン演習I 4.CSS基本](#情報デザイン演習i-4css基本)
    1. [目次](#目次)
    2. [スライド](#スライド)
+   3. [リンク](#リンク)
 
 ---
 
@@ -16,3 +17,9 @@
 
 [スライド資料](./id_04slide.pdf){:target="_blank"}
 
+## リンク
+- [caniuse.com](https://caniuse.com/){:target="_blank"}
+- [Adobe Color](https://color.adobe.com/ja/create/color-wheel){:target="_blank"}
+- [CSS Validation Service](https://jigsaw.w3.org/css-validator/validator.html){:target="_blank"}
+- [テキストダウンロード先](https://www.scc-kk.co.jp/scc-books/b-408.html){:target="_blank"}
+  
