--- a/2022/InformationDesignI/id_04.md
+++ b/2022/InformationDesignI/id_04.md
@@ -22,4 +22,4 @@
 - [Adobe Color](https://color.adobe.com/ja/create/color-wheel){:target="_blank"}
 - [CSS Validation Service](https://jigsaw.w3.org/css-validator/validator.html){:target="_blank"}
 - [テキストダウンロード先](https://www.scc-kk.co.jp/scc-books/b-408.html){:target="_blank"}
-  
+- [CSS プロパティ チートシート](https://korenarawakaru.com/tech/css/property-cheatsheet/){:target="_blank"}
