--- a/2022/ComputerPractice/cp_04.md
+++ b/2022/ComputerPractice/cp_04.md
@@ -9,7 +9,8 @@
 1. [コンピュータ演習 4. ファイルとフォルダの操作](#コンピュータ演習-4-ファイルとフォルダの操作)
    1. [目次](#目次)
    2. [スライド](#スライド)
-   3. [リンク](#リンク)
+   3. [動画](#動画)
+   4. [リンク](#リンク)
 
 
 ---
@@ -18,5 +19,13 @@
 
 [スライド資料](./cp_04slide.pdf){:target="_blank"}
 
+## 動画
+- [テキスト補助教材ダウンロード](https://www.youtube.com/watch?v=4OK8d9HC_ww){:target="_blank"}
+- [Lesson1移動とコピーをしましょう](https://www.youtube.com/watch?v=COy2mXSe4oQ){:target="_blank"}
+- [Lesson2ファイルを管理しましょう](https://www.youtube.com/watch?v=h2Nua2Q2Cng){:target="_blank"}
+
 ## リンク
+- [テキスト補助教材ダウンロード](http://noa-prolab.co.jp/download/){:target="_blank"}
+- [【Mac】デスクトップとiCloudとの同期を解除、容量を節約する方法](https://info-pocket.com/%E3%80%90mac%E3%80%91%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97%E3%81%A8icloud%E3%81%A8%E3%81%AE%E5%90%8C%E6%9C%9F%E3%82%92%E8%A7%A3%E9%99%A4%E3%80%81%E5%AE%B9%E9%87%8F%E3%82%92%E7%AF%80/){:target="_blank"}
 - [e-typing](https://www.e-typing.ne.jp/){:target="_blank"}
+- [レベルはどうなってるの？](https://www.e-typing.ne.jp/help/015.asp){:target="_blank"}
