--- a/2022/SoundDesign/sd_04.md
+++ b/2022/SoundDesign/sd_04.md
@@ -1,4 +1,4 @@
-# サウンドデザイン演習 3. 音のデジタル化<!-- omit in toc -->
+# サウンドデザイン演習 4. 音響情報I マイク<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
@@ -13,7 +13,7 @@
 
 ## スライド
 
-[スライド資料](./sd_03slide.pdf){:target="_blank"}
+[スライド資料](./sd_04slide.pdf){:target="_blank"}
 
 ## 参考リンク
 - [マイクロホンの仕様を理解する Part１ 動作原理](https://www.youtube.com/watch?v=YZvjzcd4CTI){:target="_blank"}
