--- a/2022/MediaRepresentationIII/mr3_06.md
+++ b/2022/MediaRepresentationIII/mr3_06.md
@@ -10,6 +10,7 @@
    1. [目次](#目次)
    2. [スライド](#スライド)
    3. [データ](#データ)
+   4. [動画](#動画)
 
 ---
 
@@ -19,4 +20,9 @@
 
 ## データ
 - [Premiere Logo](img/adobe-premiere-logo.png){:target="_blank"}
+
+## 動画
+- [キーフレーム・イージング・プリセットf](https://www.youtube.com/watch?v=iiMJ9Eya8O0){:target="_blank"}
+- [タイムリマップ](https://www.youtube.com/watch?v=UbXZ-_9FLnk){:target="_blank"}
+- [クリエイティブなエフェクト例](https://www.youtube.com/watch?v=rm8oBC3_6YM){:target="_blank"}
 
