--- a/2022/MediaRepresentationIII/mr3_06.md
+++ b/2022/MediaRepresentationIII/mr3_06.md
@@ -22,7 +22,7 @@
 - [Premiere Logo](img/adobe-premiere-logo.png){:target="_blank"}
 
 ## 動画
-- [キーフレーム・イージング・プリセットf](https://www.youtube.com/watch?v=iiMJ9Eya8O0){:target="_blank"}
+- [キーフレーム・イージング・プリセット](https://www.youtube.com/watch?v=iiMJ9Eya8O0){:target="_blank"}
 - [タイムリマップ](https://www.youtube.com/watch?v=UbXZ-_9FLnk){:target="_blank"}
 - [クリエイティブなエフェクト例](https://www.youtube.com/watch?v=rm8oBC3_6YM){:target="_blank"}
 
