--- a/2022/SoundDesign/sd_05.md
+++ b/2022/SoundDesign/sd_05.md
@@ -1,11 +1,12 @@
-# サウンドデザイン演習 4. 音響情報I マイク<!-- omit in toc -->
+# サウンドデザイン演習 5. 音響情報II ミキサー<!-- omit in toc -->
 
 [サウンドデザイン演習 TOP に戻る](./index.md)
 
 ---
 
 1. [スライド](#スライド)
-2. [参考リンク](#参考リンク)
+2. [データ](#データ)
+3. [参考リンク](#参考リンク)
 
 ---
 
@@ -15,10 +16,10 @@
 
 [スライド資料](./sd_05slide.pdf){:target="_blank"}
 
+## データ
+- [高度なノイズとリバーブの低減](https://helpx.adobe.com/jp/premiere-pro/how-to/advanced-noise-reverberation-reduction.html){:target="_blank"}
+
+
 ## 参考リンク
-- [マイクロホンの仕様を理解する Part１ 動作原理](https://www.youtube.com/watch?v=YZvjzcd4CTI){:target="_blank"}
-- [マイクロホンの仕様 Part2 周波数特性](https://www.youtube.com/watch?v=K9hsgc-iei4){:target="_blank"}
-- [マイクロホンの仕様 Part3 極性パターン](https://www.youtube.com/watch?v=WNdqIzSPqEE){:target="_blank"}
-- [マイクロホンの仕様を理解する Part4 電気出力](https://www.youtube.com/watch?v=3Bg5uGDXtTY){:target="_blank"}
-- [Proximity Effect(近接効果) Explained - Sound Pure Gear Tip](https://www.youtube.com/watch?v=I58Il7yIerk&t=80s){:target="_blank"}
-- [撮影現場での適切な収音テクニック](https://www.youtube.com/watch?v=NFRRiME4WS8)
+- [Soundly](https://getsoundly.com/){:target="_blank"}
+
