--- a/2022/SoundDesign/sd_05.md
+++ b/2022/SoundDesign/sd_05.md
@@ -17,7 +17,7 @@
 [スライド資料](./sd_05slide.pdf){:target="_blank"}
 
 ## データ
-- [高度なノイズとリバーブの低減](https://helpx.adobe.com/jp/premiere-pro/how-to/advanced-noise-reverberation-reduction.html){:target="_blank"}
+- [ノイズとリバーブの低減](https://helpx.adobe.com/jp/premiere-pro/how-to/reduce-noise-and-reverberation.html){:target="_blank"}
 
 
 ## 参考リンク
