--- a/2022/SoundDesign/sd_05.md
+++ b/2022/SoundDesign/sd_05.md
@@ -6,7 +6,8 @@
 
 1. [スライド](#スライド)
 2. [データ](#データ)
-3. [参考リンク](#参考リンク)
+3. [動画](#動画)
+4. [参考リンク](#参考リンク)
 
 ---
 
@@ -19,6 +20,8 @@
 ## データ
 - [ノイズとリバーブの低減](https://helpx.adobe.com/jp/premiere-pro/how-to/reduce-noise-and-reverberation.html){:target="_blank"}
 
+## 動画
+- [エッセンシャルサウンドのワークフロー](https://www.youtube.com/watch?v=Jkq0BD0w0xc){:target="_blank"}
 
 ## 参考リンク
 - [Soundly](https://getsoundly.com/){:target="_blank"}
