--- a/2022/InformationDesignAppliedI/tex/ElectronFirstStep.tex
+++ b/2022/InformationDesignAppliedI/tex/ElectronFirstStep.tex
@@ -349,7 +349,7 @@ cd /Users/sammy/Desktop/AID/AID06/DigitalClock
 \begin{quote}
 npm init -y
 \end{quote}
-とすることでpackage.jsonというファイルが作成されるはずです。Bracketsで「DigitalClock」フォルダを開きましょう。
+とすることでpackage.jsonというファイルが作成されるはずです。VSCodeで「DigitalClock」フォルダを開きましょう。
 
 \subsection{package.json}
 アプリ作成に必要な設定ファイルです。
